Bug 1263330, only initialize focus ring state for non-top-level windows, r=smaug